--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "homepage": "https://gndz07.github.io/minihackathon-heatwaves",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-select": "^1.0.0",
     "@radix-ui/react-toggle-group": "^1.0.0",
     "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.16.4",
